cert-manager/gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - 'tvminh.co'
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
